[package]
name = "render_loop"
version = "2023.12.1"
edition = "2021"

[workspace]
members = [
    "crates/*",
    "examples/*"
]
default-members = ["crates/*", "examples/*"]

[workspace.package]
version = "2023.12.1"
description = ""
documentation = ""
repository = ""
authors = ["Matthew Stone <dev@mattstone.io>"]
edition = "2021"


[dependencies]
rl_graphics = { path = "./crates/rl_graphics" }

env_logger = "0.11"
log = "0.4"

pollster = "0.3"
nalgebra = "0.33"
bytemuck = { version = "1.16", features = ["derive"] }

