[package]
name = "rl_graphics"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
env_logger = "0.11"
log = "0.4"

winit = "0.29"
wgpu = "0.20"
pollster = "0.3"
nalgebra = "0.33"
bytemuck = { version = "1.16", features = ["derive"] }
